# pycounts_sak

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycount_sak/: __init__.py  datasets.py  plotting.py  pycount_sak.py
src/pycount_sak/data/: flatland.txt
tests/: test_pycount_sak.py
