[tool.poetry]
name = "pycount_sak"
version = "0.1.0"
description = "Calculate word count in a text file!"
authors = ["TheParadox543"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
